[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/yew-utils"
version = "0.1.4"

[workspace.dependencies]
tokio = "1.47.1"
yew = "0.21.0"

[patch.crates-io]
yew = { git = "https://github.com/RustForWeb/yew.git", branch = "feature/use-composed-ref" }
